myK8S/media/radarr/radarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-svc
  namespace: media
spec:
  selector:
    app: radarr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7878
